Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_PATTERN_FOR_TYPE/try_cast_as.st
language core;

extend with #try-cast-as, #structural-patterns, #natural-literals;

fn main(n : Nat) -> Nat {
    return try { 
        true
    } cast as Nat {
        true => 12
    } with { 
        0
    }
}